# sfwloc

./: .gitignore  LICENSE  README.md  SFW_summary.txt  pyproject.toml
docs/: algorithm.md
src/sfwloc/: __init__.py  algorithm.py  model.py  solvers.py  utils.py
tests/: test_crowded.py  test_dense.py  test_dense_prior.py  test_prior.py  test_sparse.py  test_stress_grid.py
