[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfwloc"
version = "0.1.0"
description = "Sliding Frank-Wolfe for gridless sparse point source localization (Poisson, MLX)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mlx>=0.30.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
test = [
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sfwloc"]
